crates/apollo-compiler/test_data/diagnostics/0115_object_definition_with_missing_fields.txt
Error: `User` has no fields
   ╭─[ 0115_object_definition_with_missing_fields.graphql:7:1 ]
   │
 7 │ type User @foo
   │ ───────┬──────  
   │        ╰──────── User type defined here
   │ 
 9 │ extend type User @bar
   │ ──────────┬──────────  
   │           ╰──────────── User extension defined here
   │ 
   │ Help: Define one or more fields on `User` or its type extensions.
───╯

